--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -11,7 +11,7 @@
 <ion-content [fullscreen]="true">
 
   <div style="background-color: white; border-top-left-radius: 10px; border-top-right-radius: 10px;">
-    <ion-grid style="margin-top: 30%;">
+    <ion-grid>
       <ion-row>
         <ion-col size="12" style="text-align: center;">
           <ion-label>Haven't created an account? </ion-label>
@@ -33,7 +33,7 @@
           </ion-item>
 
           <button
-            style="width: 100%; height: 40px; color: #fff;background-color: #04081f; border-radius: 15px; margin-top: 10px; margin-bottom: 10px;">
+            style="width: 100%; height: 55px; color: #fff;background-color: #04081f; border-radius: 15px; margin-top: 10px; margin-bottom: 10px;">
             Sign In
           </button>
 
