feat: signup form added

--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -8,6 +8,7 @@
     </div>
 
     <mat-stepper orientation="vertical" linear>
+      <!-- Account details -->
       <mat-step label="Fill out your account details">
         <form [formGroup]="signupForm">
           <ion-item class="input">
@@ -103,210 +104,109 @@
           </ion-item>
         </form>
       </mat-step>
+      <!-- Physical address -->
       <mat-step label="Fill out your physical address">
-        <form [formGroup]="signupForm">
+        <form [formGroup]="physAddressForm">
           <ion-item class="input">
-            <ion-label color="sec" position="stacked">First Name</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="0" (ionInput)="fnameEnable()"
-              formControlName="firstname" required enterkeyhint="next"></ion-input>
-
+            <ion-label color="sec" position="stacked">House number</ion-label>
+            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="0" (ionInput)="houseNoEnable()"
+              formControlName="houseNo" type="number" required enterkeyhint="next"></ion-input>
           </ion-item>
 
-          <div *ngIf="fenabled">
+          <div *ngIf="houseNoEnabled">
 
-            <mat-error *ngIf="firstname.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">First name is <strong><span
+            <mat-error *ngIf="houseNo.hasError('required')">
+              <small style="color: red; margin-left: 5px;">House number is <strong><span
                     style="letter-spacing: .5px;">required</span></strong></small>
-            </mat-error>
-
-            <mat-error *ngIf="firstname.hasError('pattern')">
-              <small style="color: red; margin-left: 5px;" errors>First name must not have a special charector or a
-                number</small>
-            </mat-error>
-
-            <mat-error *ngIf="firstname.hasError('minlength')">
-              <small style="color: red; margin-left: 5px;" errors>First name must have atleast 3 letters</small>
             </mat-error>
           </div>
 
 
           <ion-item class="input">
-            <ion-label color="sec" position="stacked">Last Name</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="1" (ionInput)="lnameEnable()"
-              formControlName="lastname" enterkeyhint="next"></ion-input>
+            <ion-label color="sec" position="stacked">Street name</ion-label>
+            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="1" (ionInput)="streetNameEnable()"
+              formControlName="streetName" enterkeyhint="next"></ion-input>
           </ion-item>
 
-          <div *ngIf="lenabled">
-
-            <mat-error *ngIf="lastname.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">Last name is <strong><span
+          <div *ngIf="streetNameEnabled">
+            <mat-error *ngIf="streetName.hasError('required') ">
+              <small style="color: red; margin-left: 5px;">Street name is <strong><span
                     style="letter-spacing: .5px;">required</span></strong></small>
             </mat-error>
 
-            <mat-error *ngIf="lastname.hasError('pattern')">
-              <small style="color: red; margin-left: 5px;" errors>Last name must not have a special charector or a
+            <mat-error *ngIf="streetName.hasError('pattern')">
+              <small style="color: red; margin-left: 5px;" errors>Street name must not have a special charector or a
                 number</small>
             </mat-error>
 
-            <mat-error *ngIf="lastname.hasError('minlength')">
-              <small style="color: red; margin-left: 5px;" errors>Last name must have atleast 3 letters</small>
+            <mat-error *ngIf="streetName.hasError('minlength')">
+              <small style="color: red; margin-left: 5px;" errors>Street name must have atleast 3 letters</small>
             </mat-error>
           </div>
 
           <ion-item class="input">
-            <ion-label color="sec" position="stacked">Email</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="4" type="password"
-              (ionInput)="emailEnable()" formControlName="email" type="email" enterkeyhint="next"></ion-input>
+            <ion-label color="sec" position="stacked">Town</ion-label>
+            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="4" type="password" (ionInput)="townEnable()"
+              formControlName="town" type="text" enterkeyhint="next"></ion-input>
           </ion-item>
 
-          <div *ngIf="emenabled">
+          <div *ngIf="townEnabled">
 
-            <mat-error *ngIf="email.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">Email is <strong><span
+            <mat-error *ngIf="town.hasError('required') ">
+              <small style="color: red; margin-left: 5px;">Town name is <strong><span
                     style="letter-spacing: .5px;">required</span></strong></small>
             </mat-error>
-            <mat-error *ngIf="email.hasError('pattern') ">
-              <small style="color: red; margin-left: 5px;">Invalid email address</small>
+
+            <mat-error *ngIf="town.hasError('pattern')">
+              <small style="color: red; margin-left: 5px;" errors>Town name must not have a special charector or a
+                number</small>
             </mat-error>
 
+            <mat-error *ngIf="town.hasError('minlength')">
+              <small style="color: red; margin-left: 5px;" errors>Town name must have atleast 3 letters</small>
+            </mat-error>
+          </div>
+
+          <ion-item class="input">
+            <ion-label color="sec" position="stacked">Postal code</ion-label>
+            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="4" type="password" (ionInput)="codeEnable()"
+              formControlName="postalCode" type="number" enterkeyhint="next"></ion-input>
+          </ion-item>
+
+          <div *ngIf="codeEnabled">
+            <mat-error *ngIf="postalCode.hasError('required') ">
+              <small style="color: red; margin-left: 5px;">Postal code is <strong><span
+                    style="letter-spacing: .5px;">required</span></strong></small>
+            </mat-error>
           </div>
         </form>
       </mat-step>
+      <!-- Next of kin -->
       <mat-step label="Fill out your next of kin details">
-        <form [formGroup]="signupForm">
+        <form [formGroup]="nextKinForm">
           <ion-item class="input">
-            <ion-label color="sec" position="stacked">First Name</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="0" (ionInput)="fnameEnable()"
-              formControlName="firstname" required enterkeyhint="next"></ion-input>
-
-          </ion-item>
-
-          <div *ngIf="fenabled">
-
-            <mat-error *ngIf="firstname.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">First name is <strong><span
-                    style="letter-spacing: .5px;">required</span></strong></small>
-            </mat-error>
-
-            <mat-error *ngIf="firstname.hasError('pattern')">
-              <small style="color: red; margin-left: 5px;" errors>First name must not have a special charector or a
-                number</small>
-            </mat-error>
-
-            <mat-error *ngIf="firstname.hasError('minlength')">
-              <small style="color: red; margin-left: 5px;" errors>First name must have atleast 3 letters</small>
-            </mat-error>
-          </div>
-
-
-          <ion-item class="input">
-            <ion-label color="sec" position="stacked">Last Name</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="1" (ionInput)="lnameEnable()"
-              formControlName="lastname" enterkeyhint="next"></ion-input>
-          </ion-item>
-
-          <div *ngIf="lenabled">
-
-            <mat-error *ngIf="lastname.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">Last name is <strong><span
-                    style="letter-spacing: .5px;">required</span></strong></small>
-            </mat-error>
-
-            <mat-error *ngIf="lastname.hasError('pattern')">
-              <small style="color: red; margin-left: 5px;" errors>Last name must not have a special charector or a
-                number</small>
-            </mat-error>
-
-            <mat-error *ngIf="lastname.hasError('minlength')">
-              <small style="color: red; margin-left: 5px;" errors>Last name must have atleast 3 letters</small>
-            </mat-error>
-          </div>
-
-          <ion-item class="input">
-            <ion-label color="sec" position="stacked">Email</ion-label>
+            <ion-label color="sec" position="stacked">Next of kin Email</ion-label>
             <ion-input style="font-weight: bold; font-size: 91%;" tabindex="4" type="password"
-              (ionInput)="emailEnable()" formControlName="email" type="email" enterkeyhint="next"></ion-input>
+              (ionInput)="nxtKinEmailEnable()" formControlName="nextKinEmail" type="email" enterkeyhint="next">
+            </ion-input>
           </ion-item>
 
-          <div *ngIf="emenabled">
+          <div *ngIf="nxtKinEmailEnabled">
 
-            <mat-error *ngIf="email.hasError('required') ">
+            <mat-error *ngIf="nextKinEmail.hasError('required') ">
               <small style="color: red; margin-left: 5px;">Email is <strong><span
                     style="letter-spacing: .5px;">required</span></strong></small>
             </mat-error>
-            <mat-error *ngIf="email.hasError('pattern') ">
+            <mat-error *ngIf="nextKinEmail.hasError('pattern') ">
               <small style="color: red; margin-left: 5px;">Invalid email address</small>
             </mat-error>
 
-          </div>
-        </form>
-      </mat-step>
-      <mat-step label="Fill out your next of kin physical address">
-        <form [formGroup]="signupForm">
-          <ion-item class="input">
-            <ion-label color="sec" position="stacked">First Name</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="0" (ionInput)="fnameEnable()"
-              formControlName="firstname" required enterkeyhint="next"></ion-input>
-
-          </ion-item>
-          <div *ngIf="fenabled">
-
-            <mat-error *ngIf="firstname.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">First name is <strong><span
-                    style="letter-spacing: .5px;">required</span></strong></small>
-            </mat-error>
-
-            <mat-error *ngIf="firstname.hasError('pattern')">
-              <small style="color: red; margin-left: 5px;" errors>First name must not have a special charector or a
-                number</small>
-            </mat-error>
-
-            <mat-error *ngIf="firstname.hasError('minlength')">
-              <small style="color: red; margin-left: 5px;" errors>First name must have atleast 3 letters</small>
-            </mat-error>
-          </div>
-          <ion-item class="input">
-            <ion-label color="sec" position="stacked">Last Name</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="1" (ionInput)="lnameEnable()"
-              formControlName="lastname" enterkeyhint="next"></ion-input>
-          </ion-item>
-
-          <div *ngIf="lenabled">
-            <mat-error *ngIf="lastname.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">Last name is <strong><span
-                    style="letter-spacing: .5px;">required</span></strong></small>
-            </mat-error>
-
-            <mat-error *ngIf="lastname.hasError('pattern')">
-              <small style="color: red; margin-left: 5px;" errors>Last name must not have a special charector or a
-                number</small>
-            </mat-error>
-
-            <mat-error *ngIf="lastname.hasError('minlength')">
-              <small style="color: red; margin-left: 5px;" errors>Last name must have atleast 3 letters</small>
-            </mat-error>
-          </div>
-
-          <ion-item class="input">
-            <ion-label color="sec" position="stacked">Email</ion-label>
-            <ion-input style="font-weight: bold; font-size: 91%;" tabindex="4" type="password"
-              (ionInput)="emailEnable()" formControlName="email" type="email" enterkeyhint="next"></ion-input>
-          </ion-item>
-
-          <div *ngIf="emenabled">
-            <mat-error *ngIf="email.hasError('required') ">
-              <small style="color: red; margin-left: 5px;">Email is <strong><span
-                    style="letter-spacing: .5px;">required</span></strong></small>
-            </mat-error>
-            <mat-error *ngIf="email.hasError('pattern') ">
-              <small style="color: red; margin-left: 5px;">Invalid email address</small>
-            </mat-error>
           </div>
         </form>
       </mat-step>
     </mat-stepper>
     <div style="text-align: center;">
-      <button class="button" style="">
+      <button class="button">
         Sign Up
       </button>
     </div>
