--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,69 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="ourtheme">
-
-    <ion-title>
-      Home
-    </ion-title>
-    
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-
-
-  <div style="margin-top: 0px;"></div>
-
-  <ion-card *ngFor="let slot of slots" class="card">
-   
-      
-    <ion-grid>
-      <ion-row>
-        <ion-col size="5">
-          <ion-label>From: {{slot.from}}</ion-label>
-        </ion-col>
-        <ion-col size="2" style="text-align: center;">
-         
-          <ion-icon size="medium" name="swap-horizontal"></ion-icon>
-          
-         
-        </ion-col>
-  
-        <ion-col size="5">
-          <ion-label>To: {{slot.to}}</ion-label>
-        </ion-col>
-      </ion-row>
-  
-      <ion-row>
-        <ion-col size="5">
-          <ion-label>Date: {{slot.date | date: 'mediumDate'}}</ion-label>
-        </ion-col>
-        <ion-col size="2">
-            
-        </ion-col>
-  
-        <ion-col size="5">
-          <ion-label>Time: {{slot.date | date: 'shortTime'}}</ion-label>
-        </ion-col>
-      </ion-row>
-  
-      <ion-row>
-        <ion-col size="5">
-          <ion-label>Seats Avail: {{slot.availableSeats}}</ion-label>
-        </ion-col>
-        <ion-col size="2">
-           
-        </ion-col>
-  
-        <ion-col size="5">
-          <ion-label>Seats Booked: {{slot.bookedSeats}}</ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    
-    <ion-button class="card-button" size="small" [disabled]="slot.availableSeats == 0 || slot.delivered" color="ourtheme" expand="block" (click)="book(slot)"> Book</ion-button>
-  </ion-card>
-
-  <h3 *ngIf="slots.length == 0" style="text-align: center; color: #02132b7e; margin-top: 100px; font-weight: 600;">No available slots at the moment</h3>
-
-  
+  <div class="container">
+    <div class="contents">
+      <h3 class="welcome">Hi, welcome to back to Ambi
+        paml service</h3>
+      <div style="text-align: center;">
+        <img src="assets/amb.png">
+      </div>
+      <div class="outer">
+        <div class="inner"></div>
+      </div>
+    </div>
+  </div>
 </ion-content>
