--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,27 +1,43 @@
-#container {
-  text-align: center;
+img{
+  height: 160px;
+  width: 180px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.contents{
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 45%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.welcome{
+  width: 80%; 
+  margin-left: auto; 
+  margin-right: auto; 
+  text-align: center;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.outer{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #f575798c;
+  margin-right: auto;
+  margin-left: auto;
+  position: relative;
+  .inner{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #f5757a;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+  }
 }
 
-#container a {
-  text-decoration: none;
-}
