--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -22,9 +22,10 @@
               type="password"></ion-input>
           </ion-item>
 
-          <button
+          <button *ngIf="!isReset" (click)="signin()"
             style="width: 100%; height: 55px; color: #fff;background-color: #04081f; border-radius: 15px; margin-top: 10px; margin-bottom: 10px;">
-            Sign In
+            <span *ngIf="!auth.clicked">Sign In</span>
+            <ion-spinner *ngIf="auth.clicked" name="dots" color="light"></ion-spinner>
           </button>
 
           <!-- <ion-button class="button" style="border-radius: 20px;" size="medium" *ngIf="!isReset" (click)="signin()"
@@ -38,14 +39,22 @@
           </div>
 
           <div *ngIf="isReset">
-            <ion-item>
+            <ion-item class="input">
               <ion-label color="ourtheme" position="floating">Email</ion-label>
               <ion-input style="font-weight: bold; font-size: 91%;" enterkeyhint="go" [(ngModel)]="email" type="email">
               </ion-input>
             </ion-item>
-            <ion-button (click)="resetPassword()" expand="block" color="ourtheme"><span>Reset</span></ion-button>
+            <button (click)="resetPassword()"
+              style="width: 100%; height: 55px; color: #fff;background-color: #04081f; border-radius: 15px; margin-top: 10px; margin-bottom: 10px;">
+              Reset
+            </button>
+            <button (click)="cancel()"
+              style="width: 100%; height: 55px; color: #04081f;background-color: #fff; border-radius: 15px; margin-top: 10px; margin-bottom: 10px;">
+              Cancel
+            </button>
+            <!-- <ion-button (click)="resetPassword()" expand="block" color="ourtheme"><span>Reset</span></ion-button>
             <ion-button style="margin-top: 10px;" (click)="cancel()" expand="block" color="light"><span>Cancel</span>
-            </ion-button>
+            </ion-button> -->
 
           </div>
 
