--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,7 +6,7 @@
       <div style="text-align: center;">
         <img src="assets/amb.png">
       </div>
-      <div class="outer">
+      <div class="outer" (click)="requestAmbulance()">
         <div class="inner"></div>
       </div>
     </div>
