feat: just commit

--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -36,8 +36,8 @@
         <ion-icon size="small" name="person-add-outline"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button *ngIf="acs.loginStatus" tab="bookings">
-        <ion-icon size="small" name="list-outline"></ion-icon>
+      <ion-tab-button *ngIf="acs.loginStatus" tab="requests">
+        <ion-icon size="small" name="time-outline"></ion-icon>
       </ion-tab-button>
 
       <ion-tab-button tab="map">
